[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whole-body-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6,<3.9"
dependencies = [
  "certifi",
  "charset-normalizer",
  "click",
  "datasets",
  "gitpython",
  "h5py",
  "huggingface-hub",
  "idna",
  "ml-dtypes",
  "packaging",
  "pandas",
  "platformdirs",
  "psutil",
  "pydantic",
  "pydantic-core",
  "pyyaml",
  "requests",
  "sentry-sdk",
  "smmap",
  "typing-extensions",
  "urllib3",
  "wandb",
  "numpy",
  "scipy",
]

[tool.uv.sources]
whole_body_tracking = { path = "/workspace/whole_body_tracking/source/whole_body_tracking" }
rsl-rl-lib = { git = "ssh://git@github.com/leggedrobotics/rsl_rl.git", tag = "v3.0.1" }



# Index definitions
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/simple"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"